scss/partials/_comments.scss
$comment_avatar_size: 23;
$gradient_base_color: #fcfdfc; // rgba($carrot_light_gray_2, 0.15)

div.comments {
  width: 100%;
  position: relative;
  height: 100%;

  div.top-gradient {
    position: absolute;
    top: 0px;
    left: 0px;
    right: 10px;
    height: 40px;
    z-index: 10;
    pointer-events: none;
    background: -moz-linear-gradient(top,  rgba($gradient_base_color, 1) 0%, rgba($gradient_base_color,0) 100%); /* FF3.6+ */
    background: -webkit-gradient(linear, top, bottom, color-stop(0%,rgba($gradient_base_color,0)), color-stop(100%,rgba($gradient_base_color,1))); /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(top,  rgba($gradient_base_color, 1) 0%,rgba($gradient_base_color,0) 100%); /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(top,  rgba($gradient_base_color, 1) 0%,rgba($gradient_base_color,0) 100%); /* Opera 11.10+ */
    background: -ms-linear-gradient(top,  rgba($gradient_base_color, 1) 0%,rgba($gradient_base_color,0) 100%); /* IE10+ */
    background: linear-gradient(to bottom,  rgba($gradient_base_color, 1) 0%,rgba($gradient_base_color,0) 100%); /* W3C */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#{$gradient_base_color}', endColorstr='transparent',GradientType=0 ); /* IE6-9 */
  }

  div.comments-internal {
    min-height: 127px;
    height: calc(100% - 58px);
    width: 100%;
    position: relative;
    bottom: 8px;
    left: 0;
    right: 0;
    top: 0;

    &.add-comment-focus {
      height: calc(100% - 138px);
    }

    div.comments-internal-scroll {
      overflow-x: visible;
      overflow-y: auto;
      height: 100%;
      padding: 10px 10px 0px;
    }

    &.empty {

      div.comments-internal-empty {
        text-align: center;
        @include avenir_M();
        font-size: 14px;
        color: $carrot_light_gray;
        padding: calc(50% - 62px) 10px 0px;
        height: 100%;

        div.no-comments-placeholder {
          width: 110px;
          height: 30px;
          background-size: 110px 30px;
          background-repeat: no-repeat;
          background-position: center;
          margin: 0 auto;
          @include image-2x("/img/ML/no_comments_placeholder");
        }

        div.no-comments-message {
          margin-top: 14px;
        }
      }
    }

    div.comment {
      margin: 10px 0;

      &:hover div.comment-header div.edit-delete-button button.mlb-reset {
        opacity: 0.8;
      }

      div.comment-header {
        div.comment-avatar {
          width: #{$comment_avatar_size}px;
          height: #{$comment_avatar_size}px;
          background-position: 50%;
          background-size: #{$comment_avatar_size}px #{$comment_avatar_size}px;
          border-radius: #{$comment_avatar_size / 2}px;
          float: left;
        }

        div.comment-author-timestamp {
          display: block;
          width: calc(100% - 23px);

          div.comment-author {
            max-width: calc(60% - 16px);
            overflow: hidden;
            text-overflow: ellipsis;
            margin-left: 16px;
            font-size: 14px;
            color: $oc_gray_5;
            @include avenir_H();
            white-space: nowrap;
            // display: block;
            float: left;
          }

          div.comment-timestamp {
            max-width: calc(40% - 5px);
            overflow: hidden;
            text-overflow: ellipsis;
            margin-left: 5px;
            margin-top: 4px;
            font-size: 11px;
            color: rgba(78,90,107,0.6);
            white-space: nowrap;
            // display: block;
            float: left;
          }
        }
        div.edit-delete-button {
          float: right;
          position: relative;
          margin-right: -6px;

          button.mlb-reset {
            width: 18px;
            height: 18px;
            display: block;
            background-image: cdnUrl("/img/ML/post_edit_pencil.svg");
            background-position: center;
            background-repeat: no-repeat;
            background-color: rgba($carrot_light_gray_2, 0.15);
            opacity: 0;
            border: none;

            &.mdi.mdi-delete {
              padding: 7px 0px 7px 0px;
              text-align: left;
              background-image: none;
              opacity: 1;
            }
          }
        }
      }

      p.comment-body {
        @include avenir_M();
        font-size: 13px;
        color: rgba(78,90,107,0.8);
        font-weight: 300;
        margin: 10px 0;
        white-space: pre-line;
        word-wrap: break-word;

        .emojione {
          @include emoji-size(13);
        }
      }
    }

    div.add-comment-box {
      background-color: white;
      border-radius: 4px;
      border: 1px solid rgba($carrot_light_gray_1, 0.5);
      box-shadow: 0px 4px 6px 0px rgba(0, 0, 0, 0.07);
      position: relative;
      padding: 12px;

      &.show-buttons {
        padding: 16px;
      }

      left: 0;
      right: 0;
      bottom: 0px;
      width: 100%;
      margin-top: 16px;

      div.successfully-posted {
        width: 168px;
        height: 55px;
        background-color: $carrot_dark_gray;
        border-radius: 4px;
        position: absolute;
        padding: 12px 24px;
        text-align: center;
        @include avenir_H();
        color: white;
        font-size: 12px;
        top: -62px;
        left: calc(50% - 84px);
        @include no-user-select();

        &:before {
          display: block;
          content: "";
          position: absolute;
          width: 8px;
          height: 8px;
          transform: rotate(45deg);
          background-color: $carrot_dark_gray;
          left: calc(50% - 4px);
          bottom: -4px;
        }
      }

      div.add-comment-internal{
        position: relative;

        div.emoji-picker {
          right: unset;
          left: 10px;
        }

        div.add-comment {
          resize: none;
          width: 100%;
          border: none;
          outline: none;
          @include avenir_M();
          background-color: transparent;
          color: $carrot_light_gray_3;
          font-size: 13px;
          cursor: text;

          &.show-buttons {
            height: 58px;
          }

          margin-bottom: 4px;
          overflow: auto;

          .emojione {
            @include emoji-size(13);
          }

          &:empty:before {
            @include avenir_M();
            font-size: 13px;
            content: attr(placeholder);
            color: rgba($carrot_light_gray_3, 0.4);
            cursor: text;
          }
        }

        div.add-comment-footer {

          div.reply-button-container {
            float: right;
            button.reply-btn {
              float: right;
              color: $carrot_green;
              @include avenir_H();
              font-size: 14px;
              // padding: 6px 6px 9px 18px;
              height: 32px;
              width: 59px;

              &:hover {
                color: white;
              }
            }
          }
        }
      }

      div.emoji-picker {
        position: absolute;
        right: 80px;
        bottom: 16px;

        button.emoji-button {
          width: 32px;
          height: 32px;
          background-color: $carrot_green_3;
          background-image: cdnUrl("/img/ML/emoji_picker_bt_green.svg");
          background-size: 14px 14px;
          background-position: center;
          background-repeat: no-repeat;
          border-radius: 16px;

          &:hover {
            background-color: $carrot_green_2;
            background-image: cdnUrl("/img/ML/emoji_picker_bt_white.svg");
          }

          &.disabled:hover {
            background-color: $carrot_green_3;
            background-image: cdnUrl("/img/ML/emoji_picker_bt_green.svg"); 
          }

          @include preload_image(cdnUrl("/img/ML/emoji_picker_bt_white.svg"), "before");
        }

        div.picker-container {
          right: -92px !important;
        }
      }
    }
  }
}

